tests/baselines/reference/parameterPropertyOutsideConstructor.errors.txt
parameterPropertyOutsideConstructor.ts(2,9): error TS2369: A parameter property is only allowed in a constructor implementation.


==== parameterPropertyOutsideConstructor.ts (1 errors) ====
    class C {
        foo(public x) {
            ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
        }
    }